@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="screensaver.digitalclock"
 	name="Digital Clock Screensaver"
-	version="5.0.0"
+	version="5.0.1"
 	provider-name="Vojislav Vlasic">
 	<requires>
 		<import addon="xbmc.python" version="2.20.0"/>
@@ -40,7 +40,8 @@
 		<license>GNU GENERAL PUBLIC LICENSE. Version 2, June 1991</license>
 		<forum>http://forum.kodi.tv/showthread.php?tid=237338</forum>
 		<source>https://github.com/vdb86/screensaver.digitalclock</source>
-		<news>5.0.0 (2017-02-26) - Updated the screensaver to follow Krypton updates</news>
+		<news>5.0.1 (2017-06-12) - Fixed the weather icon not updating bug
+5.0.0 (2017-02-26) - Updated the screensaver to follow Krypton updates</news>
 		<assets>
 			<icon>resources/icon.png</icon>
 			<fanart>resources/fanart.png</fanart>
